# Rake

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .luacheckrc  CMakeLists.txt  CONTRIBUTING.md  CONVENTIONS.md  LICENSE.md  README.md  Rake.sln  dependencies.lua  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.md
CMake/: Utils.cmake
Engine/Integrations/Python/: miniconda3_setup.ps1
Engine/RakePlayer/: CMakeLists.txt  RakePlayer.vcxproj  RkPch.cpp  premake5.lua
Engine/RakePlayer/src/: Common.h  Version.h
Engine/RakePlayer/src/Containers/: LinkedList.hpp
Engine/RakePlayer/src/Core/: EntryPoint.h
Engine/RakePlayer/src/Core/Error/: RkException.hpp  RkSignal.hpp
Engine/RakePlayer/src/Core/Pools/: MemoryPool.hpp  ThreadPool.hpp
Engine/RakePlayer/src/Core/RkApplication/: AppFramework.hpp
Engine/RakePlayer/src/Core/RkApplication/Layer/Load/: ConfigLoader.hpp
Engine/RakePlayer/src/Core/Time/: AsyncTimer.hpp  SyncTimer.cpp  SyncTimer.hpp
Engine/RakePlayer/src/Core/Tools/: Assert.inl.hpp  Console.inl.hpp  Log.inl.hpp
Engine/RakePlayer/src/GUI/Desktop/: Window.cpp  Window.hpp
Engine/RakePlayer/src/Platform/Windows/: Win32Window.cpp  Win32Window.hpp
Engine/RakePlayer/src/Renderer/: Buffer.cpp  ComputeContext.cpp  Renderer.cpp  Renderer.hpp
Engine/RkCore/: RkCore.vcxproj  RkPch.hpp  premake5.lua
Engine/RkCore/src/: Common.h
Engine/RkCore/src/Core/: EngineConfig.h  EntryPoint.h
Engine/RkCore/src/Renderer/: Device.cpp
Engine/RkMaths/: RkMaths.vcxproj  premake5.lua
Engine/RkMaths/include/RkMath/: Constants.hpp
Engine/RkPlayer/: .natvis  CMakeLists.txt  RkPch.hpp  RkPlayer.vcxproj  premake5.lua
Engine/RkPlayer/include/Rake/: Rake.h
Engine/RkPlayer/src/: Common.def.h  Common.h  EntryPoint.h  Main.h  RkPch.cpp  RkPch.h  RkPch.hpp  Types.h  Version.h
Engine/RkPlayer/src/Application/: AppFramework.cpp  AppFramework.hpp
Engine/RkPlayer/src/Application/GUI/: Window.cpp  Window.hpp
Engine/RkPlayer/src/Containers/: BinaryTree.hpp  LinkedList.hpp
Engine/RkPlayer/src/Containers/ThreadSafe/: Queue.hpp
Engine/RkPlayer/src/Core/: AsyncTimer.cpp  AsyncTimer.hpp  Base.hpp  Color.hpp  Config.h  EngineConfig.def.h  EntryPoint.h  Event.hpp  EventBus.hpp  Exception.cpp  Exception.hpp  Macros.h  MemoryPool.hpp  RTTI.hpp  Rake.h  Random.hpp  RkException.cpp  RkException.hpp  String.hpp  StringUtils.hpp  SyncTimer.cpp  SyncTimer.hpp  ThreadPool.hpp
Engine/RkPlayer/src/Core/Application/: AppFramework.cpp  AppFramework.hpp
Engine/RkPlayer/src/Core/Error/: RkException.cpp  RkException.hpp  RkSignal.inl.hpp
Engine/RkPlayer/src/Core/Errors/: RkException.cpp  RkException.hpp  RkSignal.inl.hpp
Engine/RkPlayer/src/Core/Event/: AppEvent.inl.hpp  EventBus.cpp  EventBus.hpp  EventBus.inl.hpp  RkEvent.inl.hpp
Engine/RkPlayer/src/Core/GUI/: Window.cpp  Window.hpp
Engine/RkPlayer/src/Core/Internal/: Detection.h  Warnings.h
Engine/RkPlayer/src/Core/Pool/: MemoryPool.hpp  ThreadPool.cpp  ThreadPool.hpp
Engine/RkPlayer/src/Core/Pools/: MemoryPool.cpp  MemoryPool.hpp  ThreadPool.cpp  ThreadPool.hpp
Engine/RkPlayer/src/Core/RkApplication/: AppFramework.cpp  AppFramework.hpp
Engine/RkPlayer/src/Core/RkApplication/Layer/Load/: ConfigLoader.cpp  ConfigLoader.hpp
Engine/RkPlayer/src/Core/Time/: AsyncTimer.cpp  AsyncTimer.hpp  SyncTimer.cpp  SyncTimer.hpp
Engine/RkPlayer/src/Core/Timer/: AsyncTimer.cpp  AsyncTimer.hpp  SyncTimer.cpp  SyncTimer.hpp
Engine/RkPlayer/src/Core/Timers/: AsyncTimer.cpp  AsyncTimer.hpp  SyncTimer.cpp  SyncTimer.hpp
Engine/RkPlayer/src/Core/Tools/: Assert.inl.h  Assert.inl.hpp  Console.inl.hpp  Log.cpp  Log.hpp  Log.inl.hpp
Engine/RkPlayer/src/Core/Utils/: RkRandom.inl.h  RkString.hpp  RkString.inl.h
Engine/RkPlayer/src/Drivers/Direct3D/: Direct3DRenderer.cpp  Direct3DRenderer.hpp
Engine/RkPlayer/src/Drivers/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanUtils.hpp
Engine/RkPlayer/src/Engine/Renderer/: Buffer.cpp  Buffer.hpp  ComputeContext.cpp  ComputeContext.hpp  Device.cpp  Device.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Renderer.cpp  Renderer.hpp
Engine/RkPlayer/src/Events/: ApplicationEvents.hpp  WindowEvents.hpp
Engine/RkPlayer/src/GUI/Desktop/: MessageBox.cpp  MessageBox.hpp  MonitorManager.cpp  MonitorManager.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
Engine/RkPlayer/src/Platform/KhronosGroup/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h
Engine/RkPlayer/src/Platform/Microsoft/Windows/: Win32Window.cpp  Win32Window.hpp
Engine/RkPlayer/src/Platform/Windows/: Win32App.cpp  Win32App.hpp  Win32Utils.hpp  Win32Window.cpp  Win32Window.hpp  Windows.hpp
Engine/RkPlayer/src/Renderer/: Buffer.cpp  Buffer.hpp  ComputeContext.cpp  ComputeContext.hpp  Device.cpp  Device.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp
Engine/RkPlayer/src/Tools/: Assert.h  Log.cpp  Log.hpp
Engine/Runtime/: Doxyfile  premake5.lua
Engine/Runtime/include/: base.hpp  main.h  metadata.hpp  pch.hpp
Engine/STL/: Doxyfile  build.cpp  premake5.lua
Engine/tests/: premake5.lua
Engine/tests/include/: profiler.hpp
Engine/tests/src/: main.cpp
MSVC/: Engine.sln  Rake.sln
RkBase/include/RkBase/: RkCompiler.h  RkMain.h
RkSTL/include/RkSTL/: Assert.h  Main.h  Warnings.h
Testbed/: CMakeLists.txt  InputMappings.json  Testbed.vcxproj  premake5.lua
Testbed/include/: Testbed.hpp
Testbed/src/: Testbed.cpp  main.cpp
assets/models/: viking_room.mtl
scripts/: Clean.bat  GitCommands.bat  GitUpdateSubmodules.bat  VS2022GenPrjs.bat  compile_shaders.bat  compile_shaders_linux.sh  download_libraries.py  generate_metadata.py  generate_projects_linux.sh  install_tools.ps1  install_tools.sh  install_tools_linux.sh  requirements.txt
tests/: CMakeLists.txt  packages.config  premake5.lua  tests.vcxproj
tests/src/: Test.cpp
thirdparties/premake/: CMakeLists.txt  premake.vcxproj  premake5.lua
thirdparties/premake/customization/: VS2022Solution.lua
thirdparties/premake/instruments/: VS2022Solution.lua
(+125 files in other folders)
